# provenance

./: .gitignore  README.md
api/: README.md  pyproject.toml
api/provo/: __init__.py
api/provo/api/: main.py  schemas.py
api/provo/api/routes/: assumptions.py  decisions.py  fragments.py  graph.py  search.py
api/provo/capture/: __init__.py  parsers.py  watcher.py
api/provo/cli/: __init__.py  main.py
api/provo/integrations/: __init__.py  teams.py  teams_import.py  teams_poller.py
api/provo/processing/: __init__.py  embeddings.py  extraction.py  llm.py
api/provo/query/: __init__.py
api/provo/storage/: __init__.py  database.py  models.py  vector_store.py
api/tests/: __init__.py  test_api_assumptions.py  test_api_fragments.py  test_api_search.py  test_capture.py  test_cli.py  test_cli_decisions_assumptions.py  test_database.py  test_embeddings.py  test_extraction.py  test_fragment_linking.py  test_llm.py  test_vector_store.py
cli/: package.json
cli/src/: index.ts
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx  router.tsx
web/src/components/: AssumptionToggle.tsx  FragmentCard.tsx  FragmentEditor.tsx  Layout.tsx  LinkCreator.tsx  SearchBox.tsx  SearchFilters.tsx  SearchResultCard.tsx  TimelineCard.tsx  TimelineFilters.tsx
web/src/hooks/: useDebounce.ts
web/src/lib/: api.ts  highlight.tsx
web/src/pages/: Dashboard.tsx  Graph.tsx  Search.tsx  Timeline.tsx
web/src/styles/: theme.css
