[project]
name = "provo"
version = "0.1.0"
description = "Provenance API - capture the why behind decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "ollama>=0.1.6",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "watchdog>=4.0.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.19.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
]

[project.scripts]
provo = "provo.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
